--- a/src/app/componenets/movies-category/movies-category.component.html
+++ b/src/app/componenets/movies-category/movies-category.component.html
@@ -1,4 +1,4 @@
 <div class="row mt-4">
-  <h5 class="text-white" style="margin-left: 24px">{{ category }}</h5>
+  <h5 class="text-white" style="margin-left: 24px; font-size: 24px">{{ category }}</h5>
   <app-movies-list [movies]="movies" ></app-movies-list>
 </div>
