--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
 *{
   margin:0;
-  padding: 0;
 }
 
 body{
@@ -10,3 +8,6 @@ body{
   overflow-x: hidden ;
   padding-bottom: 100px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
