--- a/src/app/pages/movie-details/movie-details.component.css
+++ b/src/app/pages/movie-details/movie-details.component.css
@@ -1,26 +1,199 @@
-img{
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 700px;
+  position: relative;
+}
+
+.backdrop {
+  position: absolute;
+  width: 100%;
+  height: 600px;
+}
+
+.lazyloaded {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.image {
+  top: 100px; /* Add margin-top */
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+
+.info {
+  position: absolute;
+  top: 70%; /* Adjust position */
+  left: 20px;
+  transform: translateY(-50%);
+  color: white;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align to the start */
+}
+
+.banner-title {
+  text-align: left;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.banner-overview {
+  width: 500px;
+  color: white;
+  font-size: 14px;
+  margin-top: 16px; /* Add margin-top */
+  margin-bottom: 16px;
+}
+
+.pane {
+  width: 55%;
+}
+
+.name {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.meta {
+  margin-bottom: 10px;
+}
+
+
+.rate {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.rate i {
+  color: #ffd700;
+  font-size: 18px;
+}
+
+.desc {
+  margin-bottom: 10px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button--icon {
+  display: flex;
+  align-items: center;
+}
+
+.trailer {
+  margin-top: 10px;
+}
+
+.txt {
+  margin-left: 5px;
+}
+
+.mr-2 {
+  margin-right: 5px;
+}
+
+img {
   width: 100%;
   height: auto;
 }
 
-h1
-{
+h1 {
   color: #ffffff;
   font-weight: bold;
 }
 
-p{
+h2{
   color: #ffffff;
 }
 
-a{
-  background-color: #E50914;
+p {
+  color: #ffffff;
+}
+
+a {
+  background-color: #e50914;
   color: #ffffff;
   text-decoration: none;
 }
 
-a:hover{
-  background-color: #E50914;
+a:hover {
+  background-color: #ef1322;
   color: #ffffff;
   border: 2px solid #ffffff;
+}
+
+.stats {
+}
+
+.tagline{
+  margin-top: 10px;
+  font-family: sans-serif;
+  color: #b4b4b4;
+}
+.nolist {
+  list-style-type: none;
+  padding: 0;
+}
+
+.stats li {
+  margin-bottom: 10px;
+}
+
+.label {
+  font-family: sans-serif;
+  font-weight: 600;
+  margin-right: 10px;
+  display: inline-block;
+  width: 100px; /* Adjust as needed */
+  color: white; /* Set font color to white */
+  cursor: pointer; /* Change cursor to pointer */
+}
+
+.value {
+  display: inline-block;
+  width: calc(100% - 100px);
+  color: white;
+  cursor: default;
+}
+
+.comma_ {
+  display: inline-block;
+  margin-left: 10px;
+  color: white;
+  cursor: default;
+
+}
+
+.comma_ a {
+  text-decoration: none;
+  color: white;
+  cursor: default;
+}
+
+.comma_ a:hover {
+  background-color: #87060e;
+  text-decoration: underline;
+}
+
+body{
+  padding-bottom: 100px;
 }
