--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -1,38 +1,98 @@
+<div class="hero" *ngIf="movie">
+  <div class="backdrop">
+    <div class="lazyloaded">
+      <img class="lazyload image" [src]="'https://image.tmdb.org/t/p/original/' + movie.backdrop_path">
+    </div>
+    <div class="info">
+      <div class="banner-title">{{ movie.title }}</div>
+      <div class="banner-overview"> {{movie.overview}} </div>
+
+      <a class="btn btn-md" (click)="openDialogMovie(video)">Watch Trailer</a>
+
+    </div>
+
+  </div>
+</div>
+
 
 <div class="contain mt-5">
   <div class="row p-5">
-    <div class="col-lg-2" *ngIf="getMovieDetailResult.poster_path">
-      <img
-        src="https://image.tmdb.org/t/p/original/{{ getMovieDetailResult.poster_path }}"
-      >
+    <div class="col-lg-2">
+      <img src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}">
     </div>
     <div class="col-lg-10 mt-5 p-4">
-      <h1 class="mt-2 mb-2">{{getMovieDetailResult.original_title}}</h1>
-      <p class="mt-3 mb-3">{{getMovieDetailResult.overview}}</p>
-      <a class="btn btn-md" href="https://www.themoviedb.org/video/play?key={{getMovieVideoResult}}"
-         target="_blank"
-      >watch trailer</a>
+      <h2 class="tagline">"{{ movie.tagline }}"</h2>
 
-      <div class="mt-4 p-4">
-        <h2 class="text-white">Top Cast</h2>
-        <div class="row">
-          <div class="col-lg-4" *ngFor="let c of getMovieCastResult">
-            <div class="row mt-2 mb-2">
-              <div class="col-lg-2" *ngIf="c.profile_path">
-                <img
-                  src="https://image.tmdb.org/t/p/original/{{ c.profile_path}}"
-                >
-              </div>
-              <div class="col-lg-10">
-                <h3 class="text-white">{{c.original_name}}</h3>
-                <p class="text-white">{{c.character}}</p>
-              </div>
+      <div class="stats">
+
+        <ul class="nolist">
+          <li>
+            <div class="label">
+              Released
             </div>
-
-          </div>
-
-        </div>
+            <div class="comma_">
+              {{ movie.release_date | date }}
+            </div>
+          </li>
+          <li>
+            <div class="label">
+              Runtime
+            </div>
+            <div class="comma_">
+              {{ movie.runtime | time }}
+            </div>
+          </li>
+          <li>
+            <div class="label">
+              Budget
+            </div>
+            <div class="comma_">
+              {{ movie.budget | number}}
+            </div>
+          </li>
+          <li>
+            <div class="label">
+              Revenue
+            </div>
+            <div class="comma_">
+              {{ movie.revenue | number }}
+            </div>
+          </li>
+          <li *ngIf="movie?.genres && movie.genres.length">
+            <div class="label">
+              Genre
+            </div>
+            <div class="comma_" *ngFor="let genre of movie.genres">
+              {{ genre?.name }} ,
+            </div>
+          </li>
+          <li *ngIf="movie?.status">
+            <div class="label">
+              Status
+            </div>
+            <div class="comma_">
+              {{movie.status}}
+            </div>
+          </li>
+          <li *ngIf="movie?.spoken_languages && movie.spoken_languages.length">
+            <div class="label">
+              Language
+            </div>
+            <div class="comma_" *ngFor="let language of movie.spoken_languages">
+              {{ language?.name }} ,
+            </div>
+          </li>
+        </ul>
       </div>
+
     </div>
+
   </div>
 </div>
+
+
+ <app-cast-list [cast]="cast"></app-cast-list>
+
+<app-movies-category [movies]="similarMovies ? similarMovies : []" [category]="'See more like this'"></app-movies-category>
+
+
