--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -6,11 +6,14 @@
       </div>
 
       <div class="col-lg-2">
-        <button class="btn btn-md">Serch</button>
+        <button class="btn btn-md">Search</button>
       </div>
     </div>
 
   </form>
+
+
+
 
   <div class="row mt-5">
     <div class="col-lg-4" *ngFor="let s of searchResult">
