--- a/src/app/pages/movie-details/movie-details.component.css
+++ b/src/app/pages/movie-details/movie-details.component.css
@@ -2,14 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 700px;
+  height: 800px;
   position: relative;
 }
 
 .backdrop {
   position: absolute;
   width: 100%;
-  height: 600px;
+  height: 650px;
 }
 
 .lazyloaded {
@@ -20,9 +20,9 @@
 }
 
 .image {
-  top: 100px; /* Add margin-top */
+  top: 100px;
   width: 100%;
-  height: 600px;
+  height: 700px;
   object-fit: cover;
 }
 
@@ -47,11 +47,9 @@
 }
 
 .banner-overview {
-  width: 500px;
   color: white;
-  font-size: 14px;
-  margin-top: 16px; /* Add margin-top */
-  margin-bottom: 16px;
+  font-size: 16px;
+  margin: 16px 32px;
 }
 
 .pane {
@@ -147,7 +145,8 @@ a:hover {
 .tagline{
   margin-top: 10px;
   font-family: sans-serif;
-  color: #b4b4b4;
+  color: #ffffff;
+  font-size: 20px;
 }
 .nolist {
   list-style-type: none;
