modules / loading strategies

--- a/src/app/componenets/movie-item/movie-item.component.html
+++ b/src/app/componenets/movie-item/movie-item.component.html
@@ -8,7 +8,7 @@
   </div>
   <!-- Movie image -->
   <div class="image-wrapper">
-    <img [src]="imageUrl" class="rowimg largeposter" alt="..." >
+    <img [appDefaultImg]="imageUrl" class="rowimg largeposter" alt="Movie Poster">
   </div>
   <!-- Hover content -->
   <div class="hover-content" >
