--- a/src/app/componenets/person/person.component.html
+++ b/src/app/componenets/person/person.component.html
@@ -1,10 +1,8 @@
 <div class="listing-item-style">
-  <img *ngIf="actor.profile_path"
-       src="https://image.tmdb.org/t/p/w370_and_h556_bestv2/{{actor.profile_path}}">
-  <img *ngIf="!actor?.profile_path" src="assets/images/default-movie.png">
+  <img [appDefaultImg]="actor?.profile_path ? 'https://image.tmdb.org/t/p/w370_and_h556_bestv2/' + actor.profile_path : null"
+       class="profile-image">
   <div class="info">
     <h3>{{ actor.original_name }}</h3>
     <p>{{ actor.character }}</p>
   </div>
 </div>
-
